# Company-Research-Tool

./: Demo.py  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
agent/: agent.py  tools.py
pages/: About.py
